--- a/src/bacteria simulation/bacteria simulation/Makefile
+++ b/src/bacteria simulation/bacteria simulation/Makefile
@@ -1,2 +1,2 @@
-Source: Source.cpp Environment.h Environment.cpp Bacterium.h Bacterium.cpp Helper.h
-	g++ -lm Source.cpp Environment.cpp Bacterium.cpp -o Source
+Source: Source.cpp Environment.h Environment.cpp Bacterium.h Bacterium.cpp Helper.h FANN.cpp FANN.h
+	g++ -lm -lfann Source.cpp Environment.cpp Bacterium.cpp FANN.cpp -o Source
